# example-cmake

./: LICENSE  README.md
FirstProject/: CMakeLists.txt
GenerateDynamicLibrary/: CMakeLists.txt
GenerateStaticLibrary/: CMakeLists.txt
ListCommand/: CMakeLists.txt
MultipleDirs/: CMakeLists.txt
MultipleDirs/libadd/: CMakeLists.txt  add.cpp  add.h
MultipleDirs/src/: CMakeLists.txt  main.cpp
MultipleFiles/: CMakeLists.txt  add.h
